starlark-rust/starlark/src/typing/golden/type_kwargs.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib tests
# ```

Code:
def foo(**kwargs):
    pass
foo(**{1: "x"})

Error:
error: Expected type `dict[str.type, typing.Any]` but got `dict[int.type, str.type]`
 --> filename:4:7
  |
4 | foo(**{1: "x"})
  |       ^^^^^^^^
  |
